chore: Update paths-ignore in ci.yaml
Signed-off-by: Tsuyoshi Hombashi <tsuyoshi.hombashi@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,11 +6,11 @@ on:
       - main
     paths-ignore:
       - ".gitignore"
-      - "README.rst"
+      - "README.md"
   pull_request:
     paths-ignore:
       - ".gitignore"
-      - "README.rst"
+      - "README.md"
 
 env:
   go-version: "1.22"
