--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,9 +12,6 @@ on:
       - ".gitignore"
       - "README.md"
 
-env:
-  go-version: "1.22"
-
 permissions:
   contents: read
 
@@ -32,7 +29,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: ${{ env.go-version }}
+          go-version-file: go.mod
           cache: true
           cache-dependency-path: go.sum
 
@@ -49,7 +46,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: ${{ env.go-version }}
+          go-version-file: go.mod
           cache: true
           cache-dependency-path: go.sum
 
