--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,10 +37,16 @@ jobs:
 
   unit-test:
     name: Test
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     concurrency:
-      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-ut
+      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-${{ matrix.os }}-ut
       cancel-in-progress: true
+    timeout-minutes: 20
+
     steps:
       - uses: actions/checkout@v4
 
